--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-shopify": "~13.0.0",
     "babel-register": "~6.11.6",
     "eslint": "~3.3.1",
+    "eslint-plugin-mocha": "4.6.0",
     "eslint-plugin-shopify": "~14.0.0",
     "mocha": "~3.0.2"
   },
