--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "promise/always-return": 0,
     "node/shebang": 0,
     "no-console": 0,
-    "no-sync": 0
+    "no-sync": 0,
+    "no-process-exit": 0
   },
   "extends": [
     "plugin:shopify/esnext",
