--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
     "mkdirp": "0.5.1"
   },
   "devDependencies": {
-    "babel": "~6.5.2",
-    "babel-cli": "~6.11.4",
-    "babel-core": "~6.13.2",
-    "babel-plugin-add-shopify-header": "~1.0.5",
-    "babel-preset-shopify": "~13.0.0",
-    "babel-register": "~6.11.6",
-    "eslint": "~3.3.1",
+    "babel": "6.5.2",
+    "babel-cli": "6.11.4",
+    "babel-core": "6.13.2",
+    "babel-plugin-add-shopify-header": "1.0.5",
+    "babel-preset-shopify": "13.0.0",
+    "babel-register": "6.11.6",
+    "eslint": "3.3.1",
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-chai-expect": "1.1.1",
     "eslint-plugin-mocha": "4.6.0",
     "eslint-plugin-node": "2.1.2",
     "eslint-plugin-promise": "3.0.0",
-    "eslint-plugin-shopify": "~14.0.0",
-    "mocha": "~3.0.2"
+    "eslint-plugin-shopify": "14.0.0",
+    "mocha": "3.0.2"
   },
   "scripts": {
     "test": "npm run lint-allow-warning && mocha --compilers js:babel-register -u tdd test/*",
