Set up package for shopify org, and private.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "graphql-js-schema",
-  "version": "1.0.0",
+  "name": "@shopify/graphql-js-schema",
+  "version": "0.0.1",
   "description": "Transforms the JSON representation of a GraphQL schema into a set of ES6 type modules.",
   "main": "lib/index.js",
   "bin": "lib/cli.js",
