--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shopify/graphql-js-schema",
+  "name": "graphql-js-schema",
   "version": "0.3.0",
   "description": "Transforms the JSON representation of a GraphQL schema into a set of ES6 type modules.",
   "main": "lib/index.js",
