Migrate to travis

--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   },
   "scripts": {
     "test": "yarn lint && yarn mocha",
-    "mocha": "mocha --compilers js:babel-register -u tdd $([ -n \"${CI}\" ] && echo --reporter xunit --reporter-options output=$CIRCLE_TEST_REPORTS/junit/mocha.xml) test/*",
+    "mocha": "mocha --compilers js:babel-register -u tdd test/*",
     "prepublish": "babel -d lib/ src/",
-    "lint": "eslint --max-warnings 0 -c .eslintrc.json $([ -n \"${CI}\" ] && echo -o $CIRCLE_TEST_REPORTS/junit/eslint.xml -f junit) src/ test/"
+    "lint": "eslint --max-warnings 0 -c .eslintrc.json src/ test/"
   },
   "keywords": [
     "graphql,schema"
